readme updated with clone info, submodules added ctrlp, removed duplicate

--- a/README
+++ b/README
@@ -3,5 +3,9 @@ This is my set of vim plugins and configurations.
 For questions contact vsatwebdirect.md
 
 <code>
-after cloning run: git submodule update
+
+git submodule update --init --recursive
+
+git submodule update
+
 </code>
